# ChangeLog for net-proxy/haproxy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.97 2014/07/27 11:33:51 phajdan.jr Exp $

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> haproxy-1.4.25.ebuild:
  x86 stable wrt bug #514930

*haproxy-1.5.2 (12 Jul 2014)

  12 Jul 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5.1.ebuild,
  +haproxy-1.5.2.ebuild:
  Version bump

*haproxy-1.5.1 (24 Jun 2014)

  24 Jun 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5.0.ebuild,
  +haproxy-1.5.1.ebuild:
  Version bump

*haproxy-1.5.0 (19 Jun 2014)

  19 Jun 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta24.ebuild,
  -haproxy-1.5_beta26.ebuild, +haproxy-1.5.0.ebuild:
  Version bump. Cleanup

*haproxy-1.5_beta26 (28 May 2014)

  28 May 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta25.ebuild,
  +haproxy-1.5_beta26.ebuild:
  Version bump

*haproxy-1.5_beta25 (10 May 2014)

  10 May 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta22.ebuild,
  +haproxy-1.5_beta25.ebuild:
  Version bump. Cleanup

*haproxy-1.5_beta24 (26 Apr 2014)

  26 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta23.ebuild,
  +haproxy-1.5_beta24.ebuild:
  Version bump

*haproxy-1.5_beta23 (23 Apr 2014)

  23 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta21.ebuild,
  +haproxy-1.5_beta23.ebuild:
  Version bump

*haproxy-1.4.25 (27 Mar 2014)

  27 Mar 2014; Christian Ruppert <idl0r@gentoo.org> +haproxy-1.4.25.ebuild:
  Version bump

*haproxy-1.5_beta22 (03 Feb 2014)

  03 Feb 2014; Christian Ruppert <idl0r@gentoo.org>
  -haproxy-1.5_beta19-r1.ebuild, +haproxy-1.5_beta22.ebuild:
  Version bump

*haproxy-1.5_beta21 (17 Dec 2013)

  17 Dec 2013; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta20.ebuild,
  +haproxy-1.5_beta21.ebuild:
  Version bump.

*haproxy-1.5_beta20 (16 Dec 2013)
