@@ -10,4 +10,4 @@ RDEPEND=pcre? ( dev-libs/libpcre ) ssl? ( dev-libs/openssl[zlib?] ) zlib? ( sys-
 SLOT=0
 SRC_URI=http://haproxy.1wt.eu/download/1.5/src/haproxy-1.5.2.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=7eb68cff2de582b6262542ca9fd5136d
+_md5_=ef62634dae6eede28a240baf239e3f23
