@@ -7,24 +7,18 @@ DIST haproxy-1.4.25.tar.gz 838775 SHA256 84408ec1e37bf308c6b45ae3c7e66f2a9d2f762
 DIST haproxy-1.5.2.tar.gz 1334897 SHA256 f9cc9fcb30e5d998d4690331a0183a6970ca768833cc0ac68ad2a89600403d53 SHA512 b09df29349997853168d483e1fa829cccee15ba6aad4f5c8e7d8af61cb3e9f7ac2b84847ae183ef1c9d2ad0be3f01700e7a3d2a21de8366cfacbe8bdba0175c4 WHIRLPOOL b814feeba5960c8e3fb04823809d5ce38d20f046b4d4aee3f582cc15b7b0548f41f4fbd26e329c0f0492cff62d1b0abd5fddf608d7b2e4357e171ab16f348e2d
 EBUILD haproxy-1.4.24.ebuild 2314 SHA256 5cbc45c75a555fcc70cbfc0ac43a7016c8aee439f8c9f79b19bb35249b10f688 SHA512 10fe9e9c8bb3d01b39e795d4ea1635b1a99e39f16c362bcf2480cb9e61f28fe34008dcd9459fbc63a1b4aab984398e591ad872c3295a72f6768b4b5ac5ee18d3 WHIRLPOOL 6ff488778964194421177b56c4300922c14a6ebeac0041b8ae77f244aef55e32dcfbbc1993df02fb53282d816ee355141532c1771adad7daae572adba24d665f
 EBUILD haproxy-1.4.25.ebuild 2323 SHA256 6506a6775d85b53746db7cefd4a740f163da14dd2dfd39077809b0bfe73c3ffc SHA512 99d20bc38250e50d159d79519e4059adffce7be53ce92d18fb716fcdde140ba96b3e91eaf435a7c8056a30d58b35f378bafdb6648aa038193a1376b695bb2e81 WHIRLPOOL aa02a42859f1b1a225ae0b6bc72ae18ffb96d555318953ffc5410d674d161e665605ba97e0915154ad5424f50f5a60548534fd370988e7e0932b36e9e45539c3
-EBUILD haproxy-1.5.2.ebuild 3136 SHA256 8b833345e784611668a1c4ebab08c8a0b5c0130d467d2fb7bd617d84f19b6710 SHA512 4cd70ec0c3239128b20d45d8f4e0c4c9e9df957fa9235f5f94ea57aea932f89d4babfdf0f58e4d5d248867c551f1efcf6aa1d019bb02c44f4d794e83d9df9f33 WHIRLPOOL 1784339b1597658b1db51b1f3bc0280f99c283e7d5b04fbcea9dfd718815da116a64485a7f5fff9be83afef8bf6e1189de697aa0bf8c5486b13014288c69a2d7
+EBUILD haproxy-1.5.2-r1.ebuild 3224 SHA256 3e86171ad202feda0258184b43f97c297d02f557dc5acc3306e5368b222df1c6 SHA512 7d3aaa2828aa9e4a857ea6319287af0dccb6aef9424da06de675ff9e1e43fe42ff6f74c69825f472cf95bab80f16476158578eaa801e37c093e5b7894747c86f WHIRLPOOL aa350df2f609eb46febeb64a30e865efc25a797913cf9c807bb56c7443f7264e4478494a126b50455e149cf754d39c5bec5ef44bd4ec33497dd41e79fa4aaa33
 EBUILD haproxy-9999.ebuild 3109 SHA256 f9652752d42bcd138953fe4cf393acea18a31e9b2283eb1fcf06bff80ecac140 SHA512 82aacdd08628ad385693f13ed08b5cfe571f89909bf871d3e7b9647307743d69c112bc582b4c98ca69e1c4dac0a5f0f34e7641e30c9c90a49315c4f884ffb7f6 WHIRLPOOL 5f6dfdb73df7410b3a9bed5d4615299a59fa8a4e2ab783f41ee5cc7c9b09c5d28f375c53e2b08c6cd65614a09dd53a0920dfcb9dd76d603ffef107ecd6ffdf67
-MISC ChangeLog 16875 SHA256 3c6088eb57adca0b0aebd50908e758ea58dcaa1c9bb3ffc7b000575f78dedd10 SHA512 c5b1b752111691a876b85bf56f4e741cc713d2b627889dfee644b027cd58d690784b8934488821eefc09c02ab703f51b273368e8d7ced7534a779950f29decb0 WHIRLPOOL eb32be4aa5927faff169d41370904b906fb671aa43af47700dea46b052ca40856c4d799fa2ff62dd976828a645e1b00837b0cd877c0dc4fef883f5a2a22aec23
+MISC ChangeLog 17053 SHA256 534f457252a0da70fa8927244864c79cb86535049aeb9cee3e0e71117149e888 SHA512 02b2f10ce8623482ef0a73a1acde66843c78558f804bdc9aa3f14a10893ce7afe053f926e3804b820ec0f369f82a676621dba57d26cfa3f53bfac161905fbf56 WHIRLPOOL d49cf3fc341329f3ed746c95426de5b8d821d19875e60b2b4fe505e61065186335d9deede8f3c4376a8db8e8e1f21878794b0758d541bc2cf47af37fca9615b0
 MISC metadata.xml 1536 SHA256 1b50a38097c93a5656621fd4ad5e75e886aa47d7f6b4cafbbf88c0078c89b8f6 SHA512 d492805f0d02fcb2c0c4f9a4be7186f416afbc1c924b7eeb07ef3e5e0319685a7ef3f48752fb67be2538237cd88146bacadb4b43cabbab4f1bc91a78aa7ebc4b WHIRLPOOL 505f69206dd51ad75dd8ffea64aafb068eb6289ab4f481093136a393d1e394cddac290f5b7bf437aeac2c404852654ddc16bc3019c8179f2634f19038541d982
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT1CPoAAoJEE8aJVXqcZkdHTwP/0gjsxvT8Eai3arB4J9lkSXx
-D2vm7a8EvflqmsXzCJsbmNU7dFJazrtq97xJopQzoOLtMH8eQbLzHXfGuvM/NvDm
-E2R6kqZz2tlIDYxAF/4XRAsWlKx5rphoLSPFsS5YSJczQpvnAKDeRgI6Qfu/Icsy
-3oFOr2Xo/M+2+UrWoiC4SGAXxfzapGhYjpPYqnbaWrdf1t7o0ICb68wbm2L3Aagp
-Fbya85P2s/kMbMsEKpiMsH5vtmgYoiZLAaaV4LSYyxf3pYCsgGSn4eohdLtQk/aN
-HCEvlh/HpbyCJlp2GX1Wrp8RFsuXQI1BqOJ18awKKzaBXnpPags5lnQ9MhbeA7vo
-xWOhCu4Li6XCv0RVMijWLCPFZ0CAtNSVcG4chiiKe2V/wFs4Vp+K0uNKCGajm9hU
-d9dYiqBS3xvuwKJ/5+1uvf1XnEttC9KGTcpfUNAzeTv0NRRJfcJj4lU7EdL7F+aC
-PU/pvHbLc6r5VSFbpGQRiRu+uBE6tiTXZzFpySn49elCK+UWMwVP0BuJdESaxmqq
-K5Hhjz+900y78L18qF9DgnZBeRfAZJ/vCUR04H/7R3Dg2XeflAcyaDkpTZ/C+1uD
-h32OSDcnZlkV/db+mZ+g5mrc0on6xahjGd/oNQgXqzOire4Mj3ZBCzMlsQ/gc/+b
-vdOc9pyVy73mxLaoiSRh
-=bWzi
+iQEcBAEBCAAGBQJT6QhdAAoJEMOx0zmdw4Z1/vYH/jGQDPw1jVYHrelA7DbX9ltS
+SquwumNU6cuuWKxG8KUVCN/mUB1RDImND5ovZvqlvnMsMb+j6QnCwaG3fULp32e7
+p4zhDHhQAiWqQWPgXDcZzJXud+G5uAh43gL+rlS79Zo7FHSwrtVBSbrPtBY70P2x
+5qARPScK1x/p9klzbhTiGPvdyH+vdVh9oOxDtJKX4DXSPiTa8MvDPml9hECH7Vgl
+6Sc4AKDOw+7foxYlO10gDgFhsA/s2kKwTqNkrbfV4Wx3YQsVy+1xLlXZ+uYJbDE8
+38mGpa6NIJVSOzJg0JzhIAhkPibtX0J3FDt3QO8Fa+kv5jRDqxOyRQRT8/iopLc=
+=6RSq
 -----END PGP SIGNATURE-----
