@@ -1,6 +1,12 @@
 # ChangeLog for net-proxy/haproxy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.97 2014/07/27 11:33:51 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.98 2014/08/11 18:15:56 idl0r Exp $
+
+*haproxy-1.5.2-r1 (11 Aug 2014)
+
+  11 Aug 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5.2.ebuild,
+  +haproxy-1.5.2-r1.ebuild:
+  Revbump - fixes systemd wrapper, bug 517624
 
   26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> haproxy-1.4.25.ebuild:
   x86 stable wrt bug #514930
